--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
 <body>
 
-
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="container-h1 text-light text-center m-4">
+                    <h1 class="fw-bold">FizzBuzzDOM</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- link js Bootstrap -->
 
