--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row rowGrid">
+
+            </div>
+        </div>
     </div>
 
     <!-- link js Bootstrap -->
